--- a/WinSdUtil.Lib/WinSdUtil.Lib.csproj
+++ b/WinSdUtil.Lib/WinSdUtil.Lib.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
+    <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
