--- a/WinSdUtil.Lib/WinSdUtil.Lib.csproj
+++ b/WinSdUtil.Lib/WinSdUtil.Lib.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BidirectionalDictionary" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
     <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
