--- a/WinSdUtil.Lib/WinSdUtil.Lib.csproj
+++ b/WinSdUtil.Lib/WinSdUtil.Lib.csproj
@@ -16,6 +16,12 @@
     <None Update="Data\WinSd.db">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\WinSdAdSchemaGuid.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\WinSdTrustee.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
